fix hoverInfo overflow issue on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -169,6 +169,7 @@ header {
     text-overflow: clip;
 
     h4 {
+      line-height: 20px;
       font-size: 15px;
       color: #4f3458;
       margin: 5px 0 2px 10px;
@@ -214,7 +215,7 @@ header {
       vertical-align: top;
       width: 25%;
       img {
-      max-height: 126px; 
+      max-height: 126px;
       width: 100%;
       display: block;
       margin-bottom: 20px;
